# fuzzy-matcher

./: .gitignore  LICENSE  README.md  pyproject.toml
fuzzy_matcher/generator/: generate_data.py
fuzzy_matcher/matcher/: match_datasets.py  match_vectorized.py
fuzzy_matcher/pipelines/: generate_user_pipe.py  match_user_data_baseline.py  match_user_data_batch.py  match_user_data_matrix.py
tests/unit/: test_generators.py  test_matchers.py
