[tool.poetry]
name = "fuzzy-matcher"
version = "0.1.0"
description = ""
authors = ["DragosPet <iuliandragospet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
rapidfuzz = "^3.9.4"
scikit-learn = "^1.5.1"
tfidf-matcher = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
